fix grid overlay not fully covering image

--- a/src/scss/components/_grid.scss
+++ b/src/scss/components/_grid.scss
@@ -12,6 +12,7 @@
     bottom: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     &:before, &:after {
         content: '';
@@ -20,8 +21,8 @@
         right: 0;
         left: 0;
         bottom: 0;
-        width: 100%;
-        height: 100%;
+        width: 101%;
+        height: 101%;
     }
 
     &:before {
